Unit-test and implement CR part (w.r.t. CRUD) for RESTful HTTP categories controller
