# src/server/interface/IIdentifiableCategory.ts
@@ -1,0 +1,8 @@
+import {
+	Category,
+	Identifiable
+	} from "./index";
+
+
+export interface IdentifiableCategory extends Category, Identifiable {
+}
